[gd_scene load_steps=42 format=3 uid="uid://chviiwgpxoqs8"]

[ext_resource type="Script" path="res://scripts/snaut_2.gd" id="1_ssvss"]
[ext_resource type="PackedScene" uid="uid://srdrqvijqxmv" path="res://assets/snaut/meshy_snaut.blend" id="2_34p7r"]
[ext_resource type="Texture2D" uid="uid://ceiujs2ab0uk4" path="res://textures/Dust-Particles-PNG-Image-Transparent.png" id="3_b2afl"]
[ext_resource type="Texture2D" uid="uid://b4n7ax43tuqi7" path="res://textures/lfoot.png" id="4_tcnkj"]
[ext_resource type="Texture2D" uid="uid://cl3gmpffxfb2g" path="res://textures/rfoot.png" id="5_1io82"]

[sub_resource type="SphereShape3D" id="SphereShape3D_t5d5x"]
radius = 38.9306

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dfry2"]
radius = 0.0854205
height = 0.273096

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_00om3"]
radius = 0.0925681
height = 0.254674

[sub_resource type="BoxShape3D" id="BoxShape3D_uewu4"]
size = Vector3(0.0220523, 0.20015, 0.0525375)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lghms"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l3u01"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mdh6e"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_38hyr"]
animation = &"Success"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1kfka"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pwb6t"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_slkn1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q663u"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6umhv"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a56pc"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cxyne"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ssy8e"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a5wuo"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t4iin"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yxnjb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x6yxg"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e8wwm"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1rbbi"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_l7vbm"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wxy3t"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gselw"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vy32d"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_fq7qu"]
states/Idle/node = SubResource("AnimationNodeAnimation_lghms")
states/Idle/position = Vector2(374, 87)
states/Jump/node = SubResource("AnimationNodeAnimation_l3u01")
states/Jump/position = Vector2(495, 224)
states/Run/node = SubResource("AnimationNodeAnimation_mdh6e")
states/Run/position = Vector2(566, 119)
states/Success/node = SubResource("AnimationNodeAnimation_38hyr")
states/Success/position = Vector2(740, 84)
states/Walk/node = SubResource("AnimationNodeAnimation_1kfka")
states/Walk/position = Vector2(568, 17)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_pwb6t"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_slkn1"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_q663u"), "Idle", "Jump", SubResource("AnimationNodeStateMachineTransition_6umhv"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_a56pc"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_cxyne"), "Jump", "Idle", SubResource("AnimationNodeStateMachineTransition_ssy8e"), "Walk", "Run", SubResource("AnimationNodeStateMachineTransition_a5wuo"), "Run", "Walk", SubResource("AnimationNodeStateMachineTransition_t4iin"), "Run", "Jump", SubResource("AnimationNodeStateMachineTransition_yxnjb"), "Jump", "Run", SubResource("AnimationNodeStateMachineTransition_x6yxg"), "Walk", "Jump", SubResource("AnimationNodeStateMachineTransition_e8wwm"), "Jump", "Walk", SubResource("AnimationNodeStateMachineTransition_1rbbi"), "Walk", "Success", SubResource("AnimationNodeStateMachineTransition_l7vbm"), "Run", "Success", SubResource("AnimationNodeStateMachineTransition_wxy3t"), "Jump", "Success", SubResource("AnimationNodeStateMachineTransition_gselw"), "Idle", "Success", SubResource("AnimationNodeStateMachineTransition_vy32d")]
graph_offset = Vector2(62, 30)

[sub_resource type="SphereShape3D" id="SphereShape3D_tvcf2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cmt6b"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_do2d4"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("3_b2afl")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_2tptg"]
material = SubResource("StandardMaterial3D_do2d4")

[sub_resource type="Curve" id="Curve_3qxtn"]
_data = [Vector2(0, 0.417582), 0.0, 0.582418, 0, 1, Vector2(1, 1), 0.582418, 0.0, 1, 0]
point_count = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_thola"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("4_tcnkj")
billboard_mode = 2
billboard_keep_scale = true
proximity_fade_distance = 2.0

[sub_resource type="PlaneMesh" id="PlaneMesh_qskue"]
material = SubResource("StandardMaterial3D_thola")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_531dk"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("5_1io82")
billboard_mode = 2
billboard_keep_scale = true

[sub_resource type="PlaneMesh" id="PlaneMesh_7ijmq"]
material = SubResource("StandardMaterial3D_531dk")

[node name="snaut2" type="CharacterBody3D" groups=["Snauts"]]
script = ExtResource("1_ssvss")

[node name="meshy_snaut" parent="." instance=ExtResource("2_34p7r")]
unique_name_in_owner = true

[node name="Skeleton3D" parent="meshy_snaut/Armature" index="0"]
bones/0/position = Vector3(0.298402, -0.917161, -68.8744)
bones/0/rotation = Quaternion(-0.729979, 0.0195909, -0.0445451, 0.681735)
bones/1/rotation = Quaternion(0.0466387, -0.00353289, 0.00842385, 0.99887)
bones/2/position = Vector3(1.49012e-08, 12.3761, 7.45058e-09)
bones/2/rotation = Quaternion(0.0516636, -0.00234902, 0.0188334, 0.998484)
bones/3/position = Vector3(-1.04308e-07, 14.1442, 3.31551e-07)
bones/3/rotation = Quaternion(-0.036471, -0.00669503, -0.00698976, 0.999288)
bones/4/rotation = Quaternion(0.0114688, -0.0152053, 0.0140398, 0.99972)
bones/5/rotation = Quaternion(0.0569124, -0.00831421, -0.000728683, 0.998344)
bones/7/rotation = Quaternion(0.604846, 0.407827, -0.516262, 0.448679)
bones/8/position = Vector3(1.19565e-06, 19.1506, -2.11181e-06)
bones/8/rotation = Quaternion(0.544204, 0.0187198, 0.0303797, 0.838193)
bones/9/rotation = Quaternion(-0.012434, 0.0462218, 0.104038, 0.993421)
bones/10/position = Vector3(1.60995e-06, 22.1038, -6.51786e-06)
bones/10/rotation = Quaternion(-0.0178487, 0.287704, 0.00403172, 0.957545)
bones/11/position = Vector3(-4.78744, 3.19319, -5.0068e-06)
bones/11/rotation = Quaternion(0.00438814, 0.00980697, 0.274102, 0.961641)
bones/12/position = Vector3(0.574366, 4.56777, 1.01451e-06)
bones/12/rotation = Quaternion(0.0892162, -0.00337637, -0.257649, 0.962105)
bones/13/position = Vector3(-1.41623, 5.88008, -1.22782e-06)
bones/13/rotation = Quaternion(0.0133058, -0.00247714, 0.129574, 0.991477)
bones/14/position = Vector3(0.84185, 4.1057, -5.95392e-06)
bones/15/position = Vector3(2.17295e-06, 11.4574, -1.02555e-05)
bones/15/rotation = Quaternion(0.0794547, 0.0242256, 0.039743, 0.995751)
bones/16/position = Vector3(0.528769, 7.33521, 7.42118e-07)
bones/16/rotation = Quaternion(0.125579, -0.000508853, 0.024036, 0.991792)
bones/17/position = Vector3(-0.358635, 6.13156, 5.26274e-07)
bones/17/rotation = Quaternion(0.0959482, 0.0054487, 0.0792088, 0.992215)
bones/19/rotation = Quaternion(0.621948, -0.394335, 0.503272, 0.452104)
bones/20/position = Vector3(-2.23129e-06, 19.1506, 2.67518e-06)
bones/20/rotation = Quaternion(0.527231, -0.0269108, -0.0297051, 0.848776)
bones/21/position = Vector3(2.58466e-06, 15.4372, 2.80719e-06)
bones/21/rotation = Quaternion(-0.022958, -0.118725, -0.132375, 0.983796)
bones/22/position = Vector3(2.29558e-06, 22.1029, 3.93536e-06)
bones/22/rotation = Quaternion(-0.00565069, -0.247772, 0.0080292, 0.968769)
bones/23/position = Vector3(4.39464, 3.52182, 1.16228e-06)
bones/23/rotation = Quaternion(0.066616, -0.0204994, -0.319113, 0.94515)
bones/24/position = Vector3(-0.751411, 4.44225, 4.80783e-06)
bones/24/rotation = Quaternion(0.0855077, 0.00468976, 0.292613, 0.952389)
bones/25/rotation = Quaternion(0.00942924, 0.000507372, -0.128595, 0.991652)
bones/26/position = Vector3(-0.843863, 4.6739, 1.89715e-06)
bones/27/position = Vector3(-4.09435e-06, 10.0001, 2.61032e-06)
bones/27/rotation = Quaternion(0.0802893, -0.0104343, -0.0778802, 0.99367)
bones/28/position = Vector3(-1.06201, 7.98587, -4.25181e-06)
bones/28/rotation = Quaternion(0.139789, -0.000624697, 0.0284885, 0.989771)
bones/29/position = Vector3(0.637768, 6.65574, -4.34399e-07)
bones/29/rotation = Quaternion(0.108164, -0.0107954, -0.0719248, 0.991469)
bones/30/position = Vector3(0.424242, 5.03554, -2.14933e-06)
bones/31/position = Vector3(12.7036, -5.90075, 1.12569)
bones/31/rotation = Quaternion(0.0917472, 0.0299977, 0.992388, -0.076479)
bones/32/position = Vector3(-1.07028e-06, 25.1318, 1.96653e-06)
bones/32/rotation = Quaternion(-0.20574, 0.0490302, 0.0592759, 0.975579)
bones/33/position = Vector3(-1.9291e-07, 21.1243, -8.52978e-07)
bones/33/rotation = Quaternion(0.5561, 0.0466388, -0.0455477, 0.828555)
bones/34/position = Vector3(1.98863e-06, 27.4745, 9.72289e-07)
bones/34/rotation = Quaternion(0.326236, -0.105264, 0.0365831, 0.938697)
bones/35/position = Vector3(-1.99866e-06, 10.4883, 1.64755e-07)
bones/36/position = Vector3(-12.7036, -5.90074, 1.03457)
bones/36/rotation = Quaternion(-0.050227, 0.0234428, 0.997752, -0.0376618)
bones/37/position = Vector3(-4.37372e-07, 25.129, 2.95998e-07)
bones/37/rotation = Quaternion(-0.167439, -0.0342152, -0.064257, 0.983191)
bones/38/rotation = Quaternion(0.524454, -0.0749803, -0.00883097, 0.848085)
bones/39/position = Vector3(2.14719e-07, 27.6502, 1.06831e-06)
bones/39/rotation = Quaternion(0.32374, 0.103708, -0.0357262, 0.939766)
bones/40/position = Vector3(-5.85141e-07, 10.4547, 1.65659e-07)

[node name="PhysicalBoneSimulator3D" type="PhysicalBoneSimulator3D" parent="meshy_snaut/Armature/Skeleton3D" index="1"]

[node name="headAttachment3D" type="BoneAttachment3D" parent="meshy_snaut/Armature/Skeleton3D" index="2"]
transform = Transform3D(0.999632, -0.0196193, 0.0187411, -0.0145875, 0.193774, 0.980938, -0.0228768, -0.98085, 0.193417, 0.644819, 4.1134, -134.75)
bone_name = "mixamorig_Head"
bone_idx = 5

[node name="Physical Bone mixamorig_Head" type="PhysicalBone3D" parent="meshy_snaut/Armature/Skeleton3D/headAttachment3D"]
transform = Transform3D(-98.7073, -14.7331, -6.30885, 4.89311, 9.78171, -99.4001, 15.2618, -98.4239, -8.93436, 1.34566, 31.3501, 2.45656)
collision_layer = 2
collision_mask = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0305565, -0.0187561, 0.30807)
body_offset = Transform3D(-89.8082, -39.0972, -20.1471, 14.8954, 16.0636, -97.571, 41.3838, -90.6277, -8.60268, 2.72918, 30.8151, 2.21494)
bone_name = "mixamorig_Head"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="HeadShape3D" type="CollisionShape3D" parent="meshy_snaut/Armature/Skeleton3D/headAttachment3D/Physical Bone mixamorig_Head"]
transform = Transform3D(0.00956172, 0.0024119, -0.00166023, 0.00219573, -0.00215512, 0.00951495, 0.00193711, -0.00946246, -0.00259025, -0.00592609, 0.0268068, 0.174025)
shape = SubResource("SphereShape3D_t5d5x")

[node name="LhandAttachment3D" type="BoneAttachment3D" parent="meshy_snaut/Armature/Skeleton3D" index="3"]
transform = Transform3D(0.743026, 0.154401, -0.651208, -0.66916, 0.188438, -0.71883, 0.0117246, 0.969872, 0.243333, 33.7568, 4.7835, -77.5965)
bone_name = "mixamorig_LeftHand"
bone_idx = 10

[node name="Physical Bone mixamorig_LeftHand" type="PhysicalBone3D" parent="meshy_snaut/Armature/Skeleton3D/LhandAttachment3D"]
transform = Transform3D(5.80305, 60.4684, 79.4349, -3.62573, 79.6442, -60.3628, -99.7656, 0.622788, 6.81421, -2.0588, 0.0293732, 1.92572)
collision_layer = 2
collision_mask = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0155896, 0.0162063, 0.0225219)
body_offset = Transform3D(3.75282, 57.6639, 81.6137, -1.59697, 81.6954, -57.6482, -99.9168, 0.860077, 3.98675, -2.83112, -0.000740051, 1.45393)
bone_name = "mixamorig_LeftHand"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="meshy_snaut/Armature/Skeleton3D/LhandAttachment3D/Physical Bone mixamorig_LeftHand"]
transform = Transform3D(0.794135, -0.170006, -0.583479, 0.490781, 0.745649, 0.450712, 0.358447, -0.644287, 0.675581, -0.0383311, 0.123344, -0.0852665)
shape = SubResource("CapsuleShape3D_dfry2")

[node name="RhandAttachment3D" type="BoneAttachment3D" parent="meshy_snaut/Armature/Skeleton3D" index="4"]
transform = Transform3D(0.888679, -0.11467, 0.44396, 0.458523, 0.227765, -0.858999, -0.00261758, 0.966941, 0.254988, -31.0965, 10.8468, -77.4967)
bone_name = "mixamorig_RightHand"
bone_idx = 22

[node name="Physical Bone mixamorig_RightHand" type="PhysicalBone3D" parent="meshy_snaut/Armature/Skeleton3D/RhandAttachment3D"]
transform = Transform3D(-7.92087, -60.5188, -79.2132, 0.671782, 79.4287, -60.7505, 99.6836, -5.34411, -5.88489, 2.22005, 3.0795, -2.17365)
collision_layer = 2
collision_mask = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.70728e-08, -1.15484e-07, 0.0281586)
body_offset = Transform3D(7.62939e-06, -62.5356, -78.034, 0, 78.034, -62.5356, 100, 2.95639e-05, -3.8147e-06, 2.19732, 1.76093, 3.8147e-06)
bone_name = "mixamorig_RightHand"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="meshy_snaut/Armature/Skeleton3D/RhandAttachment3D/Physical Bone mixamorig_RightHand"]
transform = Transform3D(0.942274, 0.326031, 0.0763128, -0.301171, 0.72561, 0.618697, 0.146341, -0.605965, 0.781915, 0.0230923, 0.0667014, -0.0529073)
shape = SubResource("CapsuleShape3D_00om3")

[node name="Rhand_hold" type="Node3D" parent="meshy_snaut/Armature/Skeleton3D/RhandAttachment3D"]
unique_name_in_owner = true
transform = Transform3D(-6.00258, 53.6579, 37.9579, -65.5909, -7.33749, 1.45259e-06, 4.21994, -37.7226, 53.9926, 7.32548, 14.8084, -4.69597e-07)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="meshy_snaut/Armature/Skeleton3D" index="5"]
transform = Transform3D(0.998007, 0.00292516, 0.0630334, -0.0630977, 0.0569171, 0.996383, -0.000673106, -0.998374, 0.0569883, 0.868312, 0.739065, -105.857)
bone_name = "mixamorig_Spine2"
bone_idx = 3

[node name="spine2" type="PhysicalBone3D" parent="meshy_snaut/Armature/Skeleton3D/BoneAttachment3D"]
transform = Transform3D(99.6162, -3.72985, 7.91818, 3.71479, 99.9304, 0.337574, -7.92527, -0.0421319, 99.6855, -3.40228, 0.161171, 0.487392)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.53674e-09, 2.28882e-07, -1.90735e-08)
body_offset = Transform3D(100, -3.57628e-07, -2.86102e-06, 8.9407e-07, 100, -9.53674e-06, 1.90735e-06, 0, 100, -9.53674e-07, -2.28882e-05, 1.90735e-06)
bone_name = "mixamorig_Spine2"

[node name="CollisionShape3D" type="CollisionShape3D" parent="meshy_snaut/Armature/Skeleton3D/BoneAttachment3D/spine2"]
transform = Transform3D(0.99998, 9.31323e-10, -2.23517e-07, -1.40164e-06, 1, -1.56462e-07, 6.10948e-07, 0, 0.999999, 0.047432, 0.0720911, -0.0203463)
shape = SubResource("BoxShape3D_uewu4")
disabled = true

[node name="Backpack attach" type="Node3D" parent="meshy_snaut/Armature/Skeleton3D/BoneAttachment3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.45058e-09, -18.7734)

[node name="AnimationTree" type="AnimationTree" parent="meshy_snaut"]
unique_name_in_owner = true
root_node = NodePath("%AnimationTree/..")
tree_root = SubResource("AnimationNodeStateMachine_fq7qu")
anim_player = NodePath("../AnimationPlayer")

[node name="CameraPoint" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.56308, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPoint"]
shape = SubResource("SphereShape3D_tvcf2")
spring_length = 5.0

[node name="Camera3D" type="Camera3D" parent="CameraPoint/SpringArm3D"]
unique_name_in_owner = true
transform = Transform3D(1, 1.43612e-08, 1.18765e-09, -1.43612e-08, 0.986415, 0.164273, 1.18764e-09, -0.164273, 0.986415, -1.40771e-07, 0.668998, 1.61023)

[node name="snautShape" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_cmt6b")

[node name="Footsteps" type="Node3D" parent="."]

[node name="LfootDust" type="CPUParticles3D" parent="Footsteps"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.226454, 0.116286, -0.181724)
emitting = false
amount = 2
lifetime = 0.1
one_shot = true
explosiveness = 1.0
fixed_fps = 60
mesh = SubResource("QuadMesh_2tptg")
gravity = Vector3(0, 1.4, 0)
scale_amount_min = 0.5
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_3qxtn")

[node name="RfootDust" type="CPUParticles3D" parent="Footsteps"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.219576, 0.0584022, -0.11206)
emitting = false
amount = 2
lifetime = 0.1
one_shot = true
explosiveness = 1.0
fixed_fps = 60
mesh = SubResource("QuadMesh_2tptg")
gravity = Vector3(0, 1.4, 0)
scale_amount_min = 0.5
scale_amount_max = 1.5
scale_amount_curve = SubResource("Curve_3qxtn")

[node name="LfootStep" type="CPUParticles3D" parent="Footsteps"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.245877, 0.116286, -0.181724)
emitting = false
amount = 3
one_shot = true
fixed_fps = 60
mesh = SubResource("PlaneMesh_qskue")
gravity = Vector3(0, 0, 0)
scale_amount_min = 0.2
scale_amount_max = 0.2

[node name="RfootStep" type="CPUParticles3D" parent="Footsteps"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.24465, 0.0584022, -0.11206)
emitting = false
amount = 3
one_shot = true
fixed_fps = 60
mesh = SubResource("PlaneMesh_7ijmq")
gravity = Vector3(0, 0, 0)
scale_amount_min = 0.2
scale_amount_max = 0.2

[node name="snautSpeech" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.31184, 0)

[connection signal="finished" from="Footsteps/LfootDust" to="." method="_on_lfoot_dust_finished"]
[connection signal="finished" from="Footsteps/RfootDust" to="." method="_on_rfoot_dust_finished"]

[editable path="meshy_snaut"]
